Bug 448477 - First left click on the buttons of Aurorae window decoration has no effect
Summary: First left click on the buttons of Aurorae window decoration has no effect
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: aurorae (other bugs)
Version First Reported In: 5.23.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
: 449205 449280 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-01-14 17:01 UTC by Patrick Silva
Modified: 2022-01-31 17:56 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-01-14 17:01:59 UTC
STEPS TO REPRODUCE
1. use Wayland session
2. set Plastik window decoration in Window Decorations KCM
3. open Kate
4. click on any button of the window decoration: nothing happens
5. click on the same button again: now Kate reacts to the click as expected

EXPECTED RESULT
left click should always take effect

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.23.90
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2
Graphics Platform: Wayland
Comment 1 Nate Graham 2022-01-28 00:38:14 UTC
Cannot reproduce.
Comment 2 Nate Graham 2022-01-28 00:38:21 UTC
*** Bug 449205 has been marked as a duplicate of this bug. ***
Comment 3 Severin von Wnuck-Lipinski 2022-01-28 16:42:05 UTC
I can confirm this issue on both X11 and Wayland with Aurorae window decorations.
My steps to reproduce are slightly different:

1. Open any application (e.g. Dolphin)
2. Minimize the application
3. Restore the application
4. Click on the close button, nothing happens
5. Click on the close button again, window closes

Versions:

Operating System: Arch Linux
KDE Plasma Version: 5.23.90
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2
Comment 4 Nate Graham 2022-01-28 18:40:31 UTC
*** Bug 449280 has been marked as a duplicate of this bug. ***
Comment 5 Severin von Wnuck-Lipinski 2022-01-28 18:47:24 UTC
I've been able to identify the commit that's causing this problem:

kwineffects: Make OffscreenQuickView generate double click events
4881dd63a7c34d12b708494c55e1928c67f92e86

It looks like QMouseEvent::timestamp() is always zero which turns every second mouse click into a double click.
Comment 6 Bug Janitor Service 2022-01-30 17:38:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/1956
Comment 7 Nate Graham 2022-01-31 17:55:52 UTC
Git commit 5fe9fd13adc7f28e7fcaf53b04c80eee0c7a0d83 by Nate Graham, on behalf of Severin von Wnuck.
Committed on 31/01/2022 at 17:54.
Pushed by ngraham into branch 'master'.

Add timestamp to window decoration mouse events

Since 4881dd63 replaced the double click timer for OffscreenQuickView
with a time check, we need to make sure the timestamp from
XInput/libinput is passed on to the actual QMouseEvent.

M  +1    -0    src/events.cpp
M  +1    -0    src/input.cpp

https://invent.kde.org/plasma/kwin/commit/5fe9fd13adc7f28e7fcaf53b04c80eee0c7a0d83
Comment 8 Nate Graham 2022-01-31 17:56:27 UTC
Git commit d1efd8bc9e539a9e8febaf5052330b3ffbc5f924 by Nate Graham, on behalf of Severin von Wnuck.
Committed on 31/01/2022 at 17:56.
Pushed by ngraham into branch 'Plasma/5.24'.

Add timestamp to window decoration mouse events

Since 4881dd63 replaced the double click timer for OffscreenQuickView
with a time check, we need to make sure the timestamp from
XInput/libinput is passed on to the actual QMouseEvent.


(cherry picked from commit 5fe9fd13adc7f28e7fcaf53b04c80eee0c7a0d83)

M  +1    -0    src/events.cpp
M  +1    -0    src/input.cpp

https://invent.kde.org/plasma/kwin/commit/d1efd8bc9e539a9e8febaf5052330b3ffbc5f924